services/gateway-api/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.concordalabs.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              nginx-gateway.concordalabs.com/public: "true"
